--- a/playground/package.json
+++ b/playground/package.json
@@ -16,7 +16,8 @@
     "db:generate": "prisma generate",
     "db:reset": "prisma migrate reset",
     "db:studio": "prisma studio",
-    "viz": "ANALYZE=true next build"
+    "viz": "ANALYZE=true next build",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@ark-ui/anatomy": "2.2.0",
@@ -56,7 +57,6 @@
     "@next/bundle-analyzer": "14.1.0",
     "@pandacss/dev": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "@types/prettier": "2.7.3",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "dts-bundle-generator": "9.3.1",
