--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "postcss": "^8.4.x"
+  },
   "dependencies": {
     "@csstools/postcss-cascade-layers": "4.0.4",
     "@pandacss/is-valid-prop": "workspace:^",
@@ -48,7 +51,6 @@
     "lightningcss": "1.23.0",
     "lodash.merge": "4.6.2",
     "outdent": "0.8.0",
-    "postcss": "8.4.35",
     "postcss-discard-duplicates": "6.0.1",
     "postcss-discard-empty": "6.0.1",
     "postcss-merge-rules": "6.0.3",
@@ -59,6 +61,7 @@
     "ts-pattern": "5.0.8"
   },
   "devDependencies": {
-    "@types/lodash.merge": "4.6.9"
+    "@types/lodash.merge": "4.6.9",
+    "postcss": "8.4.35"
   }
 }
