--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -36,6 +36,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "postcss": "^8.4.x"
+  },
   "dependencies": {
     "@pandacss/config": "workspace:*",
     "@pandacss/core": "workspace:*",
@@ -60,7 +63,6 @@
     "perfect-debounce": "1.0.0",
     "pkg-types": "1.0.3",
     "pluralize": "8.0.0",
-    "postcss": "8.4.35",
     "preferred-pm": "3.1.2",
     "prettier": "3.2.5",
     "ts-morph": "21.0.1",
@@ -74,6 +76,7 @@
     "@types/lodash.merge": "4.6.9",
     "@types/pluralize": "0.0.33",
     "boxen": "7.1.1",
-    "p-limit": "5.0.0"
+    "p-limit": "5.0.0",
+    "postcss": "8.4.35"
   }
 }
