--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -68,6 +68,7 @@
     "cac": "6.7.14"
   },
   "devDependencies": {
+    "@pandacss/preset-base": "workspace:*",
     "@types/update-notifier": "6.0.8",
     "kleur": "4.1.5",
     "update-notifier": "7.0.0"
