--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,11 +55,17 @@
     "*.d.ts",
     "postcss.js"
   ],
+  "bundleDependencies": [
+    "@pandacss/preset-base",
+    "@pandacss/preset-panda"
+  ],
   "dependencies": {
     "@clack/prompts": "0.7.0",
     "@pandacss/config": "workspace:*",
     "@pandacss/logger": "workspace:*",
     "@pandacss/node": "workspace:*",
+    "@pandacss/preset-base": "workspace:*",
+    "@pandacss/preset-panda": "workspace:*",
     "@pandacss/postcss": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
@@ -67,8 +73,6 @@
     "cac": "6.7.14"
   },
   "devDependencies": {
-    "@pandacss/preset-base": "workspace:*",
-    "@pandacss/preset-panda": "workspace:*",
     "@types/update-notifier": "6.0.8",
     "kleur": "4.1.5",
     "update-notifier": "7.0.0"
