--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -21,7 +21,7 @@ body:
     attributes:
       label: "Problem Statement/Justification"
       description: |
-        Please provide valid reason(s) why this should be added to Chakra UI
+        Please provide valid reason(s) why this should be added to Panda
 
         If this feature is related to a problem you've noticed, mention it as
         well.
