--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -57,11 +57,11 @@
     "lodash.merge": "4.6.2",
     "look-it-up": "2.1.0",
     "outdent": " ^0.8.0",
+    "package-manager-detector": "0.1.0",
     "perfect-debounce": "1.0.0",
     "pkg-types": "1.0.3",
     "pluralize": "8.0.0",
     "postcss": "8.4.40",
-    "preferred-pm": "3.1.4",
     "prettier": "3.2.5",
     "ts-morph": "21.0.1",
     "ts-pattern": "5.0.8",
