--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "flexsearch": "0.7.43",
     "focus-visible": "5.2.1",
     "git-url-parse": "14.0.0",
+    "react-icons": "5.3.0",
     "intersection-observer": "0.12.2",
     "match-sorter": "6.3.4",
     "next": "14.2.3",
