--- a/sandbox/preact-ts/package.json
+++ b/sandbox/preact-ts/package.json
@@ -17,6 +17,7 @@
     "@pandacss/dev": "workspace:*",
     "@preact/preset-vite": "2.10.1",
     "typescript": "5.6.2",
-    "vite": "5.4.11"
+    "vite": "5.4.11",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
