--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,7 @@
     "prepare": "pnpm db:generate && pnpm css:codegen",
     "build": "pnpm types:codegen && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "dev": "next dev",
     "db:format": "prisma format",
     "db:generate": "prisma generate",
@@ -50,16 +50,20 @@
     "typescript": "5.8.3",
     "usehooks-ts": "2.14.0",
     "util": "0.12.5",
-    "zod": "3.22.4"
+    "zod": "3.25.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.37.0",
     "@next/bundle-analyzer": "15.5.6",
     "@pandacss/dev": "workspace:*",
     "@pandacss/types": "workspace:*",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "dts-bundle-generator": "9.3.1",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.5.6",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "raw-loader": "4.0.2",
     "tsx": "4.20.6"
   },
