--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "build:next": "next build",
     "build": "run-s build:*",
     "prebuild": "pnpm --filter=../packages/** build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --max-warnings 0",
     "start": "next start"
   },
   "dependencies": {
@@ -34,9 +34,11 @@
     "react-fast-marquee": "1.6.5",
     "react-icons": "5.5.0",
     "scroll-into-view-if-needed": "3.1.0",
-    "zod": "3.22.4"
+    "zod": "3.25.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.37.0",
     "@pandacss/dev": "workspace:*",
     "@pandacss/postcss": "workspace:^",
     "@shikijs/rehype": "^3.13.0",
@@ -44,6 +46,9 @@
     "@types/git-url-parse": "16.0.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "15.5.6",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "postcss": "8.4.49",
     "prettier": "3.2.5",
     "rehype-autolink-headings": "^7.1.0",
