--- a/sandbox/storybook/package.json
+++ b/sandbox/storybook/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "panda codegen",
     "dev": "storybook dev -p 6006",
     "build": "storybook build"
   },
@@ -13,18 +15,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.26.10",
-    "@storybook/addon-actions": "9.0.8",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-links": "9.1.12",
-    "@storybook/addon-styling": "1.3.7",
-    "@storybook/react": "9.1.12",
-    "@storybook/react-webpack5": "9.1.12",
-    "babel-loader": "10.0.0",
     "@pandacss/dev": "workspace:*",
+    "@storybook/addon-docs": "10.0.7",
+    "@storybook/addon-links": "10.0.7",
+    "@storybook/react": "^10.0.7",
+    "@storybook/react-vite": "10.0.7",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@vitejs/plugin-react": "5.1.1",
+    "eslint-plugin-storybook": "10.0.7",
     "postcss": "8.4.49",
-    "storybook": "9.1.12"
+    "storybook": "10.0.7",
+    "vite": "7.2.2"
   },
   "dependencies": {
     "react": "19.1.1",
