--- a/packages/studio/package.json
+++ b/packages/studio/package.json
@@ -55,20 +55,22 @@
   "license": "MIT",
   "dependencies": {
     "@astrojs/react": "4.4.2",
+    "@nanostores/react": "^1.0.0",
+    "@pandacss/astro-plugin-studio": "workspace:*",
     "@pandacss/config": "workspace:*",
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "@pandacss/astro-plugin-studio": "workspace:*",
     "astro": "5.16.2",
+    "nanostores": "^1.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "vite": "7.2.4"
   },
   "devDependencies": {
+    "@testing-library/react": "16.3.0",
     "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
-    "@testing-library/react": "16.3.0"
+    "@types/react-dom": "19.2.3"
   }
 }
